// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartOverComponentFactory AssessmentStartOverFactory getStartOverComponent 1`] = `
<StartOverDropdown
  allTestSuffix="Assessment"
  dropdownDirection="down"
  rightPanelOptions={
    {
      "showTest": true,
    }
  }
  singleTestSuffix="the title"
  switcherStartOverPreferences={
    {
      "showTest": true,
    }
  }
/>
`;

exports[`StartOverComponentFactory AssessmentStartOverFactory getStartOverMenuItem 1`] = `
<div
  role="menuitem"
>
  <StartOverDropdown
    allTestSuffix="Assessment"
    dropdownDirection="left"
    rightPanelOptions={
      {
        "showTest": true,
      }
    }
    singleTestSuffix="the title"
    switcherStartOverPreferences={
      {
        "showTest": true,
      }
    }
  />
</div>
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverComponent renders scanning is false => component matches snapshot 1`] = `
<InsightsCommandButton
  className="startOverMenuItem"
  data-automation-id="start-over"
  disabled={false}
  iconProps={
    {
      "className": "startOverMenuItemIcon",
      "iconName": "Refresh",
    }
  }
  onClick={[Function]}
  text="Start over"
/>
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverComponent renders scanning is true => component matches snapshot 1`] = `
<InsightsCommandButton
  className="startOverMenuItem"
  data-automation-id="start-over"
  disabled={true}
  iconProps={
    {
      "className": "startOverMenuItemIcon",
      "iconName": "Refresh",
    }
  }
  onClick={[Function]}
  text="Start over"
/>
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverMenuItem renders scanning is false => component matches snapshot 1`] = `
{
  "className": "startOverMenuItem",
  "data-automation-id": "start-over",
  "disabled": false,
  "iconProps": {
    "className": "startOverMenuItemIcon",
    "iconName": "Refresh",
  },
  "onClick": [Function],
  "text": "Start over",
}
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverMenuItem renders scanning is true => component matches snapshot 1`] = `
{
  "className": "startOverMenuItem",
  "data-automation-id": "start-over",
  "disabled": true,
  "iconProps": {
    "className": "startOverMenuItemIcon",
    "iconName": "Refresh",
  },
  "onClick": [Function],
  "text": "Start over",
}
`;

exports[`StartOverComponentFactory QuickAssessStartOverFactory getStartOverComponent 1`] = `
<StartOverDropdown
  allTestSuffix="Quick Assess"
  dropdownDirection="down"
  rightPanelOptions={
    {
      "showTest": true,
    }
  }
  singleTestSuffix="requirement name stub"
  switcherStartOverPreferences={
    {
      "showTest": false,
    }
  }
/>
`;

exports[`StartOverComponentFactory QuickAssessStartOverFactory getStartOverMenuItem 1`] = `
<div
  role="menuitem"
>
  <StartOverDropdown
    allTestSuffix="Quick Assess"
    dropdownDirection="left"
    rightPanelOptions={
      {
        "showTest": true,
      }
    }
    singleTestSuffix="requirement name stub"
    switcherStartOverPreferences={
      {
        "showTest": false,
      }
    }
  />
</div>
`;
